Menu principal basic : début du menu principal
styles.css : ajout de style de base à modifier et changement de nom vers
styles.css, était style.css

tutorial.css : ajout d'event pour ouvrir une boîte d'information de base

--- a/webSite/src/index.html
+++ b/webSite/src/index.html
@@ -1,59 +1,20 @@
 <!-- FILEPATH: /c:/Users/thoms/OneDrive - polymtl.ca/Hackaton/Hackaton_InfoLog_A23/HackatonInfoLogA23/webSite/src/index.html -->
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
-    <style>
-        body {
-            background-color: #f2f2f2;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        .menu {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 30px;
-        }
-
-        .menu a {
-            display: block;
-            width: 200px;
-            padding: 10px;
-            margin-bottom: 10px;
-            text-align: center;
-            text-decoration: none;
-            color: #fff;
-            background-color: #007bff;
-            border-radius: 5px;
-        }
-
-        .menu a:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/tutorial.js" type="module" defer></script>
 </head>
 <body>
     <div class="container">
         <h1>Welcome to Monster Finder Game</h1>
         <div class="menu">
-            <a href="monsterFinder.html">Play Game</a>
-            <a href="tutorial.html">See Tutorial</a>
+            <a href="monsterFinder.html">Jouer</a>
+            <button type="submit">Tutoriel</button>
         </div>
     </div>
 </body>
