--- a/webSite/src/index.html
+++ b/webSite/src/index.html
@@ -1,21 +1,14 @@
-<!-- FILEPATH: /c:/Users/thoms/OneDrive - polymtl.ca/Hackaton/Hackaton_InfoLog_A23/HackatonInfoLogA23/webSite/src/index.html -->
-
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/tutorial.js" type="module" defer></script>
+    <script src="assets/js/loading.js" type="module" defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to Monster Finder Game</h1>
-        <div class="menu">
-            <a href="monsterFinder.html">Jouer</a>
-            <button type="submit">Tutoriel</button>
-        </div>
+    <div id="loading-overlay">
+        <img src="../../figures/KAMMT Games logo.png" id="logo">
+        <div class="spinner"></div>
     </div>
 </body>
 </html>
