adding end game for typing game

--- a/webSite/src/typing.html
+++ b/webSite/src/typing.html
@@ -16,8 +16,8 @@
     <div id="main">
         <article>
             <img src="../../figures/monster/monster_1.png" alt="monster">
-            <h2 id="targetWord" style="font-size: 24px; padding: 10px;"></h2>
-            <h2 id="wordWritten" style="font-size: 24px; border: 1px solid #000; padding: 10px;"></h2>
+            <h2 id="targetWord"></h2>
+            <h2 id="wordWritten"></h2>
             <div class="keyboard">
                 <div class="row">
                   <div class="key key__esc">
@@ -227,10 +227,12 @@
             </div>
         </article>
         
-        <nav>Nav</nav>
-        <aside>Aside</aside>
+        <nav></nav>
+        <aside></aside>
+
+        <div id="overlay"></div>
     </div>
-    <footer>Footer</footer>
+    <footer></footer>
   </body>
 
 <body>
