loading page completed

--- a/webSite/src/index.html
+++ b/webSite/src/index.html
@@ -1,13 +1,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monster Finder Game</title>
+    <title>Loading</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/loading.js" type="module" defer></script>
 </head>
 <body>
     <div id="loading-overlay">
-        <img src="../../figures/KAMMT Games logo.png" id="logo">
+        <img src="./assets/png/KAMMT Games logo.png" id="logo">
         <div class="spinner"></div>
     </div>
 </body>
