--- a/webSite/src/index.html
+++ b/webSite/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="loading-overlay">
-        <img src="../../figures/KAMMT Games logo.png" id="logo">
+        <img src="./assets/png/KAMMT Games logo.png" id="logo">
         <div class="spinner"></div>
     </div>
 </body>
