Slight modif css

--- a/webSite/src/typing.html
+++ b/webSite/src/typing.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Typing Game</title>
   <link rel="stylesheet" href="./assets/css/styles_fight.css">
-  <link rel="stylesheet" href="./assets/css/styles_keyboad.css">
+  <link rel="stylesheet" href="./assets/css/styles_keyboard.css">
   <script src="./assets/js/typingGame.js" defer></script>
 </head>
 
@@ -15,7 +15,7 @@
     </header>
     <div id="main">
         <article>
-            <img src="../../figures/monster/monster_1.png" alt="monster">
+            <img src="./assets/png/monster/monster_1.png" alt="monster">
             <h2 id="targetWord"></h2>
             <h2 id="wordWritten"></h2>
             <div class="keyboard">
