--- a/webSite/src/mainMenu.html
+++ b/webSite/src/mainMenu.html
@@ -8,13 +8,12 @@
     <title>Monster Finder Game</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/tutorial.js" type="module" defer></script>
-    <script src="assets/js/mainPageEvents.js" type="module" defer></script>
 </head>
 <body>
     <div class="container" id="mainMenu">
         <h1>Welcome to Monster Finder Game</h1>
         <div class="menu">
-            <a href="monsterFinder.html">Jouer</a>
+            <a href="mainStory.html">Jouer</a>
             <button type="submit">Tutoriel</button>
         </div>
     </div>
