--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
-    <link rel="stylesheet" href="assets/css/mainStory.css">
-    <script src="assets/js/mainStory.js" type="module" defer></script>
 </head>
 <body>
+    This is the game now.
 </body>
 </html>
