--- a/webSite/src/mainMenu.html
+++ b/webSite/src/mainMenu.html
@@ -1,5 +1,3 @@
-<!-- FILEPATH: /c:/Users/thoms/OneDrive - polymtl.ca/Hackaton/Hackaton_InfoLog_A23/HackatonInfoLogA23/website/src/index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/tutorial.js" type="module" defer></script>
 </head>
-<body>
+<body class="pageCenter">
     <div class="container" id="mainMenu">
         <h1>Welcome to Monster Finder Game</h1>
         <div class="menu">
             <a href="mainStory.html">Jouer</a>
-            <button type="submit">Tutoriel</button>
+            <a href="tutorial.html">Tutoriel</a>
         </div>
     </div>
 </body>
