Info f11 peu pertinent?

--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
+    <link rel="stylesheet" href="assets/css/mainGame.css">
+    <script src="assets/js/mainGame.js" type="module"></script>
 </head>
 <body>
-    This is the game now.
+    <span id="ratio-text1"> appuie sur F11 </span>
+    <span id="ratio-text2"> appuie sur F11 </span>
+    <span id="ratio-text3"> appuie sur F11 </span>
+    <span id="ratio-text4"> appuie sur F11 </span>
+    <img src="assets/png/garage/0_light.png" alt="Garage Image">
+
+
+
 </body>
 </html>
