--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
     <link rel="stylesheet" href="assets/css/mainGame.css">
-    <script src="assets/js/mainGame.js" type="module"></script>
+    <script src="assets/js/mainGame.js"></script>
 </head>
 <body>
-    <span id="ratio-text1"> appuie sur F11 </span>
-    <span id="ratio-text2"> appuie sur F11 </span>
-    <span id="ratio-text3"> appuie sur F11 </span>
-    <span id="ratio-text4"> appuie sur F11 </span>
-    <img src="assets/png/garage/0_light.png" alt="Garage Image">
-
-
+    <img id="img" src="assets/png/garage/0_light.png" alt="Garage Image">
+    <div id="container">
+        <div class="side-containers" onclick="switchImage('left')">
+            <div> go left </div>
+        </div>
+        <div class="side-containers" onclick="switchImage('right')">
+            <div> go right </div>
+        </div>
+    </div>
 
 </body>
 </html>
