--- a/webSite/src/mainStory.html
+++ b/webSite/src/mainStory.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monster Finder Game</title>
+    <title>Main Story</title>
     <link rel="stylesheet" href="assets/css/mainStory.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica&display=swap" rel="stylesheet">
     <script src="assets/js/mainStory.js" type="module" defer></script>
 </head>
 <body>
