--- a/webSite/src/mainMenu.html
+++ b/webSite/src/mainMenu.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&family=VT323">
+    <script src="assets/js/mainMenu.js" type="module" defer></script>
 </head>
 <body class="pageCenter">
+    <img src="assets/png/lofi bg.jpg" alt="background" id="background">
     <div class="container" id="mainMenu">
-        <h1>Welcome to Monster Finder Game</h1>
+        <h1>Monster Finder Game</h1>
         <div class="menu">
-            <a href="mainStory.html">Jouer</a>
-            <a href="tutorial.html">Tutoriel</a>
+            <a id="play"><b>Play</b></a>
+            <a id="tutorial"><b>Tutorial</b></a>
         </div>
     </div>
 </body>
