monster apear to precise location

--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Finder Game</title>
     <link rel="stylesheet" href="assets/css/mainGame.css">
-    <script src="assets/js/mainGame.js"></script>
+    <script src="assets/json/house.json" defer></script>
+    <script type="module" src="../src/assets/js/fileManager.js" defer></script>
+    <script type="module" src="assets/js/mainGame.js" defer></script>
+
 </head>
 <body>
     <img id="img" src="assets/png/garage/0_light.png" alt="Garage Image">
