pattern visual mini game

--- a/webSite/src/pattern.html
+++ b/webSite/src/pattern.html
@@ -6,5 +6,24 @@
     <script src="assets/js/patternGame.js" type="module" defer></script>
 </head>
 <body>
+    <header>
+        <h1>Fight the Monster!</h1>
+    </header>
+    <div id="main">
+        <article>
+            <div class="button-container">
+                <div class="row">
+                    <div class="color-button" id="blue"></div>
+                    <div class="color-button" id="pink"></div>
+                </div>
+                <div class="start-button start-click">
+                    <p class="start-click">Begin</button>
+                </div>
+                <div class="row">
+                    <div class="color-button" id="yellow"></div>
+                    <div class="color-button" id="purple"></div> 
+                </div>
+                
+            </div>
 </body>
 </html>
