--- a/webSite/src/mainStory.html
+++ b/webSite/src/mainStory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Story</title>
+    <title>Chasseur de monstres</title>
     <link rel="stylesheet" href="assets/css/mainStory.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
