--- a/webSite/src/typing.html
+++ b/webSite/src/typing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Typing Game</title>
+  <title>Chasseur de monstres</title>
   <link rel="stylesheet" href="./assets/css/styles_fight.css">
   <link rel="stylesheet" href="./assets/css/styles_keyboard.css">
   <script src="./assets/js/typingGame.js" defer></script>
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Fight the Monster!</h1>
+        <h1>Combat le monstre!</h1>
     </header>
     <div id="main">
         <article>
