typing game : Amélioration de l'affichage
Le clavier allume maintenent en mauve pour les touches non alphanumérique
La barre espace revient maintenent au blanc après avoir été doré
Les chiffres allume maintenant en rouge
L'affichage de fin indique le nombre de mauvaise touche et s'ajuste à la page

--- a/webSite/src/typing.html
+++ b/webSite/src/typing.html
@@ -20,54 +20,54 @@
               <h2 id="wordWritten"></h2>
             <div class="keyboard">
                 <div class="row">
-                  <div class="key key__esc">
+                  <div class="key key__esc" id="ESCAPE">
                     <i data-feather="x"></i>
                     ESC
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="1">
                     1
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="2">
                     2
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="3">
                     3
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="4">
                     4
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="5">
                     5
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="6">
                     6
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="7">
                     7
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="8">
                     8
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="9">
                     9
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="0">
                     0
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="-">
                     -
                   </div>
-                  <div class="key key__symbols">
-                    +
+                  <div class="key key__symbols" id = "=">
+                    =
                   </div>
-                  <div class="key key__delete key__icon">
+                  <div class="key key__delete key__icon" id="BACKSPACE">
                     <i data-feather="delete"></i>
                     BACKSPACE
                   </div>
                 </div>
 
                 <div class="row">
-                  <div class="key key__oneandhalf">
+                  <div class="key key__oneandhalf" id="TAB">
                     <i data-feather="log-in"></i>
                     TAB
                   </div>
@@ -101,19 +101,19 @@
                   <div id="P" class="key letter">
                     P
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="{">
                     { <span> [
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="}">
                     } <span> ]
                   </div>
-                  <div class="key key__symbols key__oneandhalf">
+                  <div class="key key__symbols key__oneandhalf" id="|">
                     | <span> \
                   </div>
                 </div>
 
                 <div class="row">
-                  <div class="key key__caps">
+                  <div class="key key__caps" id="CAPSLOCK">
                     <i data-feather="meh"></i>
                     CAPS LOCK
                   </div>
@@ -144,20 +144,20 @@
                   <div id="L" class="key letter">
                     L
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id=":">
                     :
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id=""">
                     "
                   </div>
-                  <div class="key key__enter">
+                  <div class="key key__enter" id="ENTER">
                     <i data-feather="corner-down-left"></i>
                     ENTER
                   </div>
                 </div>
 
                 <div class="row">
-                  <div class="key key__shift-left">
+                  <div class="key key__shift-left" id="SHIFT">
                     <i data-feather="arrow-up-circle"></i>
                     SHIFT
                   </div>
@@ -182,60 +182,60 @@
                   <div id="M" class="key letter">
                     M
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id=">">
                     >
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="<">
                     <
                   </div>
-                  <div class="key key__symbols">
+                  <div class="key key__symbols" id="?">
                     ?
                   </div>
-                  <div class="key key__arrow">
+                  <div class="key key__arrow" id="ARROWUP">
                     &#8593;
                   </div>
-                  <div class="key key__shift-right">
+                  <div class="key key__shift-right" id="SHIFT">
                     <i data-feather="arrow-up-circle"></i>
                     SHIFT
                   </div>
                 </div>
 
                 <div class="row">
-                  <div class="key key__bottom-funct">
+                  <div class="key key__bottom-funct" id="CONTROL">
                     CTRL
                   </div>
-                  <div class="key key__bottom-funct">
+                  <div class="key key__bottom-funct" id="META">
                     <i data-feather="activity"></i>
                     ACT
                   </div>
-                  <div class="key key__bottom-funct">
+                  <div class="key key__bottom-funct" id="ALT">
                     <i data-feather="command"></i>
                     ALT
                   </div>
-                  <div class="key key__spacebar">
+                  <div class="key key__spacebar letter" id=" ">
                     SPACE
                   </div>
-                  <div class="key">
+                  <div class="key" id="ALT">
                     <i data-feather="command"></i>
                     ALT
                   </div>
-                  <div class="key">
+                  <div class="key" id="CONTEXTMENU">
                     <i data-feather="activity"></i>
                     MENU
                   </div>
-                  <div class="key key__arrow">
+                  <div class="key key__arrow" id="ARROWLEFT">
                     <i data-feather="arrow-left"></i>
                     &#8592;
                   </div>
-                  <div class="key key__arrow">
+                  <div class="key key__arrow" id="ARROWDOWN">
                     <i data-feather="arrow-down"></i>
                     &#8595;
                   </div>
-                  <div class="key key__arrow">
+                  <div class="key key__arrow" id="ARROWRIGHT">
                     <i data-feather="arrow-right"></i>
                     &#8594;
                   </div>
-                  <div class="key key__logo">
+                  <div class="key key__logo" id="LOGO">
                       <img src="./assets/png/KAMMT Games logo.png" alt="logo" id="logo">
                   </div>
                 </div>
