add local storage

--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -14,10 +14,10 @@
     <img id="tire" src="assets/png/garage/tire.png">
     <div id="container">
         <div id="draggableBox"></div>
-        <div class="side-containers" onclick="switchImage('left')">
+        <div class="side-containers" onclick="switchView('left')">
             <div> gauche </div>
         </div>
-        <div class="side-containers" onclick="switchImage('right')">
+        <div class="side-containers" onclick="switchView('right')">
             <div> droite </div>
         </div>
     </div>
