pattern game done + francisation

--- a/webSite/src/index.html
+++ b/webSite/src/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading</title>
+    <title>Chasseurs de monstres</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/loading.js" type="module" defer></script>
 </head>
