--- a/webSite/src/mainMenu.html
+++ b/webSite/src/mainMenu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monster Finder Game</title>
+    <title>Chasseurs de monstres</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&family=VT323">
     <script src="assets/js/mainMenu.js" type="module" defer></script>
@@ -11,10 +11,10 @@
 <body class="pageCenter">
     <img src="assets/png/lofi bg.jpg" alt="background" id="background">
     <div class="container" id="mainMenu">
-        <h1>Monster Finder Game</h1>
+        <h1>Chasseurs de monstres</h1>
         <div class="menu">
-            <a id="play"><b>Play</b></a>
-            <a id="tutorial"><b>Tutorial</b></a>
+            <a id="play"><b>Jouer</b></a>
+            <a id="tutorial"><b>Tutoriel</b></a>
         </div>
     </div>
 </body>
