--- a/webSite/src/pattern.html
+++ b/webSite/src/pattern.html
@@ -1,29 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading</title>
+    <title>Chasseurs de monstres</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=VT323">
     <link rel="stylesheet" href="assets/css/styles_fight.css">
     <script src="assets/js/patternGame.js" type="module" defer></script>
 </head>
 <body>
     <header>
-        <h1>Fight the Monster!</h1>
+        <h1>Combat le monstre!</h1>
     </header>
-    <div id="main">
-        <article>
-            <div class="button-container">
-                <div class="row">
-                    <div class="color-button" id="blue"></div>
-                    <div class="color-button" id="pink"></div>
-                </div>
-                <div class="start-button start-click">
-                    <p class="start-click">Begin</button>
-                </div>
-                <div class="row">
-                    <div class="color-button" id="yellow"></div>
-                    <div class="color-button" id="purple"></div> 
-                </div>
-                
+        <div id="instructions">Attend que le cercle redevienne blanc et copie le motif affiché.</div>
+        <div class="grid-container">
+            <div class="grid-item">
+                <div class="color-button" id="blue" data-color="#4CC9F0"></div>
             </div>
+            <div class="grid-item">
+                <div class="color-button" id="pink" data-color="#F72585"></div>
+            </div>
+            <div class="grid-item">
+                <button id="start"> <p id="click">Clicker pour débuter</p></button>
+            </div>
+            <div class="grid-item">
+                <div class="color-button" id="yellow" data-color="#FFBE0B"></div>
+            </div>
+            <div class="grid-item">
+                <div class="color-button" id="purple" data-color="#8338EC"></div> 
+            </div>
+        </div>
+        <div id="overlay"></div>
 </body>
 </html>
