Drag fully fonctionning + shiniiing

--- a/webSite/src/mainMenu.html
+++ b/webSite/src/mainMenu.html
@@ -9,7 +9,7 @@
     <script src="assets/js/mainMenu.js" type="module" defer></script>
 </head>
 <body class="pageCenter">
-    <img src="assets/png/lofi bg.jpg" alt="background" id="background">
+    <img src="assets/png/lofi bg.jpg" alt="background" id="background" ondragstart="return false;">
     <div class="container" id="mainMenu">
         <h1>Monster Finder Game</h1>
         <div class="menu">
