adding bedroom and stairs

--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chasseur de monstres</title>
     <link rel="stylesheet" href="assets/css/mainGame.css">
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="assets/json/house.json" defer></script>
     <script src="assets/js/mainGame.js" defer></script>
 
