--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -30,21 +30,5 @@
             <div> droite </div>
         </div>
     </div>
-    <img src="./assets/png/monster/monster_1.png" alt="monster" class="monster" id="monster">
+    <!-- <img src="./assets/png/monster/monster_1.png" alt="monster" class="monster" id="monster"> -->
 </body>
-
-<!-- <body>
-    <img id="img" src="assets/png/garage/0.png" alt="Garage Image">
-    <img id="tire" src="assets/png/garage/tire.png">
-    <div id="container">
-        <div class="draggable"></div>
-        <div class="side-containers" onclick="switchView('left')">
-            <div> gauche </div>
-        </div>
-        <div class="side-containers" onclick="switchView('right')">
-            <div> droite </div>
-        </div>
-    </div>
-
-</body>
-</html> -->
