--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -17,18 +17,18 @@
       <svg>
             <mask id="cursorMask" maskUnits="objectBoundingBox" maskContentUtils="objectBoundingBox">
                 <rect x="0" y="0" width="100%" height="100%" fill="#FFFFFF" />
-                <circle cx="0" cy="0" r="10vw" fill="#000000" />
+                <circle cx="0" cy="0" r="15vw" fill="#000000" />
             </mask>
           <image href="./assets/png/garage/0.png" id="front-image" class="front"/>
       </svg>
     </div>
     <div id="container" class="front">
-    <div class="side-containers left" onclick="switchView('left')">
-        <div> gauche </div>
-    </div>
+        <div class="side-containers left" onclick="switchView('left')">
+            <div> gauche </div>
+        </div>
         <div class="side-containers right" onclick="switchView('right')">
             <div> droite </div>
         </div>
+        <img src="./assets/png/monster/monster_1.png" alt="monster" class="monster" id="monster">
     </div>
-    <!-- <img src="./assets/png/monster/monster_1.png" alt="monster" class="monster" id="monster"> -->
 </body>
