arrows in main game

--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -16,10 +16,10 @@
     <div id="container">
         <div class="draggable"></div>
         <div class="side-containers" onclick="switchView('left')">
-            <div> gauche </div>
+            <div class="arrows"> &#9665; </div>
         </div>
         <div class="side-containers" onclick="switchView('right')">
-            <div> droite </div>
+            <div class="arrows"> &#9655; </div>
         </div>
     </div>
 
