mainGame : image rotation with falsh light working

--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -19,7 +19,7 @@
                 <rect x="0" y="0" width="100%" height="100%" fill="#FFFFFF" />
                 <circle cx="0" cy="0" r="15vw" fill="#000000" />
             </mask>
-          <image href="./assets/png/garage/0.png" id="front-image" class="front"/>
+          <image href="./assets/png/garage/0.png" id="front-image" class="front" alt=""/>
       </svg>
     </div>
     <div id="container" class="front">
@@ -29,6 +29,6 @@
         <div class="side-containers right" onclick="switchView('right')">
             <div> droite </div>
         </div>
-        <img src="./assets/png/monster/monster_1.png" alt="monster" class="monster" id="monster">
+        <!-- <img src="./assets/png/monster/monster_1.png" alt="monster" class="monster" id="monster"> -->
     </div>
 </body>
