tutorial add buttons

--- a/webSite/src/tutorial.html
+++ b/webSite/src/tutorial.html
@@ -12,6 +12,13 @@
 <body class="pageCenter" id="flashlight">
     <div id="mask"></div>
 
+    <div class="room-view" onclick="switchView('left')">
+        <div id="leftArrow"> &#9665; </div>
+    </div>
+    <div class="room-view" onclick="switchView('right')">
+        <div id="rightArrow"> &#9655; </div>
+    </div>
+
     <div class="main-container">
         <svg>
           <defs>
