--- a/webSite/src/mainGame.html
+++ b/webSite/src/mainGame.html
@@ -14,10 +14,10 @@
     <img id="img" src="assets/png/garage/0_light.png" alt="Garage Image">
     <div id="container">
         <div class="side-containers" onclick="switchView('left')">
-            <div> gauche </div>
+            <div> &#9665 </div>
         </div>
         <div class="side-containers" onclick="switchView('right')">
-            <div> droite </div>
+            <div> &#9655 </div>
         </div>
     </div>
 </body>
