--- a/webSite/src/pattern.html
+++ b/webSite/src/pattern.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Combat le monstre!</h1>
     </header>
-        <div id="instructions">Attend que le cercle redevienne blanc et copie le motif affiché.</div>
+        <div id="instructions">Répète le motif affiché dès que le cercle redevienne blanc.</div>
         <div class="grid-container">
             <div class="grid-item">
                 <div class="color-button" id="blue" data-color="#4CC9F0"></div>
@@ -21,13 +21,13 @@
                 <div class="color-button" id="pink" data-color="#F72585"></div>
             </div>
             <div class="grid-item">
-                <button id="start"> <p id="click">Clicker pour débuter</p></button>
+                <button id="start"> <p id="click">Cliquer pour débuter</p></button>
             </div>
             <div class="grid-item">
                 <div class="color-button" id="yellow" data-color="#FFBE0B"></div>
             </div>
             <div class="grid-item">
-                <div class="color-button" id="purple" data-color="#8338EC"></div> 
+                <div class="color-button" id="purple" data-color="#8338EC"></div>
             </div>
         </div>
         <div id="overlay"></div>
